app/assets/stylesheets/styles/static.scss
@import '../base/themes';
@import '../base/mixins';
@import 'foundation/functions';

$header-height: rem-calc(72);
$offset: rem-calc(30);

@mixin horizontal-center-contents {
  display: table;
  margin: 0 auto;
}

$browser-clear: rem-calc(72);

$post-block-width: 90%;
$post-block-margin: 5%;

@mixin post-block-offset {
  margin-left: $post-block-margin;
  width: $post-block-width;
}

$mobile-h1-size: 2.125rem*3/4;
$mobile-post-margin-top: $mobile-h1-size*2;

.post-container {
  @include post-block-offset;
  @media only screen and (max-width: 40em) {
    margin-top: $mobile-post-margin-top;
  }
}

.post-date {
  @include post-block-offset;

  text-align: center;
  margin-top: $browser-clear/2;
  // margin-bottom: $browser-clear/4;
  h2 {
    margin-bottom: 0;
    margin-top: 0;
    @media only screen and (max-width: 40em) {
      font-weight: 500;
    }
  }
}

.post-date-separator {
  width: $post-block-width + 3%;
  margin-left: $post-block-margin - 1.5%;
  margin-top: $browser-clear/2;
  margin-bottom: $browser-clear*2/3;
  // border-width: 2px;
  border-style: none;
  height: 0.125rem;
  // border-top-style: none;
  @media only screen and (max-width: 40em) {
    margin-bottom: $browser-clear*5/9;
  }
}

@for $i from 1 through 4 {
  $rotation: ($i - 1)*90;
  .pd-separator-#{$i} {
    $bd-color: lighten(adjust-hue($badge-color, $rotation), 10%);
    background: $bd-color; /* Old browsers */
    @media only screen and (min-width: 40.063em) {
      background: -moz-linear-gradient(left,  $bg-color 0%, $bd-color 1%, $bd-color 99%, $bg-color 100%); /* FF3.6-15 */
      background: -webkit-linear-gradient(left,  $bg-color 0%,$bd-color 1%,$bd-color 99%,$bg-color 100%); /* Chrome10-25,Safari5.1-6 */
      background: linear-gradient(to right,  $bg-color 0%,$bd-color 1%,$bd-color 99%,$bg-color 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#{$bg-color}", endColorstr="#{$bg-color}",GradientType=1 ); /* IE6-9 */
    }
  }
}

.image-container {
  position: relative;
  padding: $browser-clear/10 $browser-clear/6.2 $browser-clear/10 $browser-clear/6.2;
  @media only screen and (max-width: 40em) {
    padding: 0;
  }

  // border-style: solid;
  // border-width: 0.25em;
  // border-color: mix($header-color, $alt-bg-color, 15%);
}

.post-image {
  display: block;
  margin: 0 auto;
  width: 100%;
}

.image-overlay-text {
  border-radius: 0.25em;
  background-color: rgba(#2A2A2A, 0.2);
  display: block;
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  text-shadow: 0px 0px 0.438em #000000;
  h1 {
    font-size: rem-calc(52);
  }
  h3 {
    font-size: rem-calc(36);
  }

  @media only screen and (max-width: 40em) {
    height: auto;
    top: -$mobile-post-margin-top*11/13;
    background-color: transparent;
    text-shadow: none;
    h1 {
      font-size: $mobile-h1-size;
    }
  }

  @include ease-transition($medium-transition);

  @for $i from 1 through 6 {
    h#{$i} {
      color: $bg-color;
      @media only screen and (max-width: 40em) {
        color: $font-color;
      }
      font-weight: normal;
    }
  }
}

.post-link {
  &:hover {
    .image-overlay-text {
      background-color: rgba(#1A1A1A, 0.5);
      @media only screen and (max-width: 40em) {
        background-color: transparent;
      }
    }
  }
}

.image-overlay-table {
  height: 100%;
  width: 100%;
  display: table;
}

.image-overlay-cell {
  display: table-cell;
  vertical-align: middle;
}

.image-overlay-text-center {
  @include horizontal-center-contents;
  @media only screen and (max-width: 40em) {
    h3 {
      display: none;
    }
  }
}

#header {
  height: $header-height;
}

#site-content {
  padding-left: 1em;
  padding-right: 1em;
  background-color: $alt-bg-color;
  margin-top: $browser-clear;
  @media only screen and (max-width: 40em) {
    margin-top: 0;
  }
  h3 {
    // font-weight: lighter;
  }
}

#site-content-separator {
  display: none;
  border-style: none;
  @media only screen and (max-width: 40em) {
    margin-top: $browser-clear*2/3;
    margin-bottom: $browser-clear*2/3;
    display: block;
  }
  height: 3rem + $browser-clear*2/3;
}

#greeting {
  @include horizontal-center-contents;
  text-align: center;
  padding-top: $browser-clear/2;
}

#category-row {
  @include horizontal-center-contents;
  // padding-bottom: $browser-clear;
  padding-top: $browser-clear/3;
  @media only screen and (max-width: 40em) {
    padding-top: $browser-clear/4;
    padding-bottom: $browser-clear/3;
  }
  br {
    display: none;
    @media only screen and (max-width: 40em) {
      display: inline;
    }
  }
}

// $font-size: 3em;
// $border-width: 0.08em;
//line-height: $font-size/2*2/3 - $border-width;

@mixin circle-badge($font-size, $border-width) {
  display: inline-block;
  padding: $font-size/4*2/3 - $border-width/2;
  padding-left: $font-size/4*2/3 - $border-width*4/9;
  text-align: center;
  border-radius: 50%;
  border-style: double;
  border-width: $border-width;
  border-color: $font-color;
  line-height: $font-size/3 + $border-width;
  height: $font-size*2/3;
  width: $font-size*2/3;
  font-weight: bold;
  background-color: adjust-hue($alt-bg-color, -30deg); // #d73d33;
  font-size: $font-size !important;
  font-family: "Hind", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif !important;
  color: $font-color;
  margin-left: 1rem;

  @include ease-transition($fast-transition);

  &:hover {
    border-color: $bg-color;
    color: $bg-color;
    background-color: $badge-color;
  }
}

$mobile-badge-font-size: 2.25em;
$mobile-badge-border-size: 0.045em;

.circle {
  @include circle-badge(3em, 0.08em);
  @media only screen and (max-width: 40em) {
    @include circle-badge($mobile-badge-font-size, $mobile-badge-border-size);
    line-height: $mobile-badge-font-size/3 + $mobile-badge-border-size*3;
    padding-left: $mobile-badge-font-size/4*9/14;
    margin-left: 0;
    margin-bottom: 1rem;
  }
}

.circle-small {
  @include circle-badge(2.5em, 0.08em);
  @media only screen and (max-width: 40em) {
    @include circle-badge($mobile-badge-font-size, $mobile-badge-border-size);
    line-height: $mobile-badge-font-size/3 + $mobile-badge-border-size*3;
    padding-left: $mobile-badge-font-size/4*9/14;
    margin-left: auto;
    margin-right: auto;
    border-color: $bg-color;
    color: $bg-color;
    background-color: rgba($badge-color, 1);
  }
  margin-left: auto;
  margin-right: auto;
  border-color: $bg-color;
  color: $bg-color;
  background-color: rgba($badge-color, 1);
}

.circle-center {
  @include horizontal-center-contents;
}

.mobile-circle-desc {
  display: none;
  font-size: $mobile-badge-font-size*3/5;
  margin-left: $mobile-badge-border-size;
  font-family: "Hind", "Helvetica Neue", Helvetica, sans-serif;
  font-size: 1.438rem;
  @media only screen and (max-width: 40em) {
    display: inline;
  }
}

#explanation {
  @media only screen and (max-width: 40em) {
    font-weight: 400;
  }
}

#cat-1 {
  margin-left: 0;
}

@for $i from 1 through 4 {
  $rotation: ($i - 1)*90;
  #cat-#{$i} {
    &:hover {
      background-color: adjust-hue($badge-color, $rotation);
    }
    @media only screen and (max-width: 40em) {
      background-color: adjust-hue($badge-color, $rotation);
      border-color: $bg-color;
      color: $bg-color;
    }
  }
  .cat-#{$i}-perma {
    background-color: adjust-hue($badge-color, $rotation);
  }
}

.alt-bg-ribbon {
  @media only screen and (max-width: 40em) {
    background-color: $alt-bg-color;
    margin-top: $mobile-post-margin-top/3;
  }
  width: 100%;
}

.category-description-container {
  position: relative;
  padding-bottom: 5.5rem + $browser-clear/2;
  padding-top: 0.5rem;
  width: 100%;
  @media only screen and (max-width: 40em) {
    display: none;
  }
}

.category-description {
  width: 100%;
  position: absolute;
  text-align: center;
  display: none;
  h5 {
    font-size: 1.25rem;
  }
  h4 {
    font-weight: 500;
  }
}

.post-cat-badge {
  @include horizontal-center-contents;
}

.perma-circle {
  @extend .perma-circle-no-margin;

  margin-top: $browser-clear/2;
  margin-bottom: $browser-clear/2;
  @media only screen and (max-width: 40em) {
    margin-top: $browser-clear/3;
    margin-bottom: $browser-clear/3;
  }
}

.perma-circle-no-margin {
  @extend .circle;
  @extend .circle:hover;

  margin-left: 0;
}

$static-badge-color: saturate(lighten($header-color, 10%), 10%);

.badge-border-bottom {
  border-bottom-color: $static-badge-color !important;
}

.badge-background {
  background-color: $static-badge-color !important;
}

.badge-color {
  color: $alt-bg-color !important;
}

.ps-scrollbar-y, .ps-scrollbar-x {
  background-color: lighten($font-color, 66.7%) !important;
}

@for $i from 1 through 4 {
  $rotation: ($i - 1)*90;
  .cat-background-#{$i} {
    background-color: adjust-hue($badge-color, $rotation);
  }
}

.form-font {
  font-family: "Hind", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
}
.form-button-hover {
  &:hover {
    background-color: darken($static-badge-color, 6.67%) !important;
  }
}
.form-button {
  @extend .form-font;
  @extend .form-button-hover;
  font-size: 1em !important;
  color: $bg-color;
  $padding: 0.563rem;
  padding-top: $padding !important;
  padding-bottom: $padding !important;
}
.form-div {
  display: table;
  width: 100%;
  @extend .form-font;
}
.form-div-row {
  display: table-row;
}
.form-div-cell {
  display: table-cell;
  padding-top: 0;
  vertical-align: top;
  input, label {
    font-size: 1rem;
    margin-bottom: 0;
    @media only screen and (max-width: 40em) {
      width: 100%;
    }
  }
  @media only screen and (max-width: 40em) {
    width: 100%;
    display: block;
  }
}
.form-label {
  padding-left: 1em;
  padding-right: 1em;
  background-color: $static-badge-color !important;
  color: $bg-color !important;
  border-style: none;
  font-size: 1rem;
}
.form-label-middle {
  @extend .form-label;
  border-bottom-style: solid;
  border-top-style: solid;
  @media only screen and (max-width: 40em) {
    border-style: none;
  }
}
.no-border {
  border-style: none !important;
}
.full-width {
  width: 100%;
}

.image-credit {
  font-family: $sans-font;
  text-align: center;
  margin-top: $browser-clear/6;
}




$categories: project, thought, review, testing;

@for $i from 1 through 4 {
  $rotation: ($i - 1)*90;
  .bg-#{nth($categories, $i)} {
    background-color: adjust-hue($badge-color, $rotation);
  }
}

// Including from markdown.scss due to weird left padding behavior //

$header-font-sizes: rem-calc(44) rem-calc(37) rem-calc(27) rem-calc(23) rem-calc(18) 1rem;
$header-font-size-mobile-reduction: rem-calc(10) rem-calc(10) rem-calc(5) rem-calc(5) 0 0;
$offset: rem-calc(30)/2;
$border-width: 0.5rem;
$main-padding: $offset*2;

@mixin header-style-color($color) {
  @for $i from 1 through 6 {
    #main-content h#{$i} {
      background-color: $color;
      color: $bg-color;

      margin-left: -$main-padding - $border-width;
      // margin-left: -$offset*2 - $border-width;
      margin-right: -$main-padding - $border-width;
      margin-bottom: nth($header-font-sizes, $i);
      margin-top: nth($header-font-sizes, $i);
      // Hind needs a bigger top offset to look centered
      padding-top: nth($header-font-sizes, $i)/8;
      padding-left: $offset+$border-width;
      padding-right: $offset;
      @media only screen and (max-width: 40em) {
        margin-top: (nth($header-font-sizes, $i) - nth($header-font-size-mobile-reduction, $i));
        margin-bottom: (nth($header-font-sizes, $i) - nth($header-font-size-mobile-reduction, $i));
        padding-top: (nth($header-font-sizes, $i) - nth($header-font-size-mobile-reduction, $i))/8;
      }
    }
  }
}

// update from markdown.scss //

@include header-style-color($static-badge-color);

